cmake_minimum_required(VERSION 3.17)
project(TIPL-example VERSION 1.0.0 LANGUAGES CXX)
include(CTest)
option(ENABLE_CUDA "Enable using CUDA" OFF)

find_package(TIPL QUIET)
if ( TIPL_FOUND )
  message(STATUS "Found TIPL")
  set( USE_INSTALLED_TIPL ON )
else()
  message(STATUS "Did not find TIPL. Will try to use TIPL_HOME")
  if( TIPL_HOME ) 
    set(USE_INSTALLED_TIPL OFF)
    find_package(Threads)
  else()
    message(FATAL_ERROR "TIPL was not found and TIPL_HOME is not set. Cannot continue")
  endif()
endif()

add_subdirectory(cpp)

if( ENABLE_CUDA )
add_subdirectory(cuda/image_linear_registration)
add_subdirectory(cuda/image_resample)
add_subdirectory(cuda/image_nonlinear_registration)
add_subdirectory(cuda/image_basic_op)
endif()
